<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_today_decision">오늘의 결정</string>
    <string name="hot_section">HOT</string>
    <string name="category">카테고리</string>
    <string name="upload_decision">결정 올리기</string>
    <!-- 카테고리 RadioButton 텍스트 -->
    <string name="category_exercise">운동</string>
    <string name="category_fashion">패션</string>
    <string name="category_drama">드라마</string>
    <string name="category_company">회사</string>
    <string name="category_dating">연애</string>
    <string name="category_food">음식</string>
    <string name="category_device">전자기기</string>
    <string name="category_university">대학</string>
    <string name="category_music">음악</string>
</resources>