<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainpageFragment">

    <LinearLayout
        android:id="@+id/frm_MyFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="76dp">

        <!-- 상단 제목바 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2E3B4E"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/group_24" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView4"
                android:layout_alignBottom="@+id/imageView4"
                android:layout_toStartOf="@+id/profile_button"
                android:layout_toEndOf="@+id/imageView4"
                android:text="@string/title_today_decision"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profile_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/vector" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hot_section"
            android:textColor="#B22222"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- HOT 리스트 카드뷰 -->
        <FrameLayout
            android:id="@+id/User_list"
            android:layout_width="match_parent"
            android:layout_height="272dp" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <!-- 카테고리 선택 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B0BAD5"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="41dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_exercise" />

                    <RadioButton
                        android:layout_width="84dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_fashion" />

                    <RadioButton
                        android:layout_width="82dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_drama" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_company" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_dating" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_food" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_device" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_university" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/category_music" />
                </TableRow>
            </TableLayout>
        </RadioGroup>

    </LinearLayout>

    <!-- 결정 올리기 버튼 -->

    <Button
        android:id="@+id/button"
        app:layout_constraintBottom_toBottomOf="@+id/frm_MyFrag"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:backgroundTint="#3A5A9A"
        android:paddingHorizontal="32dp"
        android:text="@string/upload_decision"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>